--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "morgan": "~1.9.0",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "progress": "^2.0.3"
   }
 }
